--- a/CholeskyDecomposition.vcxproj.filters
+++ b/CholeskyDecomposition.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Reader.cpp">
