--- a/CholeskyDecomposition.vcxproj
+++ b/CholeskyDecomposition.vcxproj
@@ -129,13 +129,14 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="Decompositor.h" />
+    <ClInclude Include="HilbertMatrix.h" />
     <ClInclude Include="Reader.h" />
     <ClInclude Include="SolverOfSLAE.h" />
-    <ClInclude Include="Utils.h" />
     <ClInclude Include="Writer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Decompositor.cpp" />
+    <ClCompile Include="HilbertMatrix.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Reader.cpp" />
     <ClCompile Include="SolverOfSLAE.cpp" />
@@ -147,6 +148,8 @@
   <ItemGroup>
     <Text Include="Diag.txt" />
     <Text Include="DiagOutput.txt" />
+    <Text Include="HilbertDiagOutput.txt" />
+    <Text Include="HilbertMatrixOutput.txt" />
     <Text Include="Matrix.txt" />
     <Text Include="MatrixOutput.txt" />
     <Text Include="Output.txt" />
