--- a/CholeskyDecomposition.vcxproj.filters
+++ b/CholeskyDecomposition.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClInclude Include="Writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Utils.h">
+    <ClInclude Include="HilbertMatrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -59,6 +59,9 @@
     <ClCompile Include="SolverOfSLAE.cpp">
       <Filter>Source Files\Solution</Filter>
     </ClCompile>
+    <ClCompile Include="HilbertMatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Project4\.clang-format" />
@@ -76,5 +79,7 @@
     <Text Include="Output.txt" />
     <Text Include="DiagOutput.txt" />
     <Text Include="MatrixOutput.txt" />
+    <Text Include="HilbertDiagOutput.txt" />
+    <Text Include="HilbertMatrixOutput.txt" />
   </ItemGroup>
 </Project>
