--- a/CholeskyDecomposition.vcxproj
+++ b/CholeskyDecomposition.vcxproj
@@ -134,7 +134,7 @@
     <ClInclude Include="Input\Writer.h" />
     <ClInclude Include="TapeMatrix.h" />
     <ClInclude Include="Solution\Decompositor.h" />
-    <ClInclude Include="Solution\SolverOfSLAE.h" />
+    <ClInclude Include="Solution\SLAESolver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HilbertMatrix.cpp" />
@@ -143,7 +143,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="TapeMatrix.cpp" />
     <ClCompile Include="Solution\Decompositor.cpp" />
-    <ClCompile Include="Solution\SolverOfSLAE.cpp" />
+    <ClCompile Include="Solution\SLAESolver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Project4\.clang-format" />
