--- a/CholeskyDecomposition.vcxproj.filters
+++ b/CholeskyDecomposition.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClInclude Include="Input\Writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Input\Reader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Solution\Decompositor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -45,6 +42,15 @@
     <ClInclude Include="TapeMatrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixFileReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VectorFileReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -52,9 +58,6 @@
     </ClCompile>
     <ClCompile Include="HilbertMatrix.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Input\Reader.cpp">
-      <Filter>Source Files\Source\Input</Filter>
     </ClCompile>
     <ClCompile Include="Input\Writer.cpp">
       <Filter>Source Files\Source\Input</Filter>
@@ -67,6 +70,15 @@
     </ClCompile>
     <ClCompile Include="TapeMatrix.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MatrixFileReader.cpp">
+      <Filter>Source Files\Source\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="FileReader.cpp">
+      <Filter>Source Files\Source\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="VectorFileReader.cpp">
+      <Filter>Source Files\Source\Input</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
