--- a/CholeskyDecomposition.vcxproj
+++ b/CholeskyDecomposition.vcxproj
@@ -130,7 +130,7 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="FileReader.h" />
-    <ClInclude Include="HilbertMatrix.h" />
+    <ClInclude Include="HilbertTapeMatrix.h" />
     <ClInclude Include="Input\Writer.h" />
     <ClInclude Include="MatrixFileReader.h" />
     <ClInclude Include="TapeMatrix.h" />
@@ -140,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileReader.cpp" />
-    <ClCompile Include="HilbertMatrix.cpp" />
+    <ClCompile Include="HilbertTapeMatrix.cpp" />
     <ClCompile Include="Input\Writer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MatrixFileReader.cpp" />
