--- a/CholeskyDecomposition.vcxproj
+++ b/CholeskyDecomposition.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>Input; Solution</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Input; Solution;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
